--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-loading-skeleton": "^3.3.1",
     "react-router-dom": "^6.16.0"
   },
   "devDependencies": {
